rewrite much code:take out xutils library and wait for import new library to support http usage