@@ -10,13 +10,16 @@ import com.fionera.demo.bean.ChatMsgBean;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 
 /**
+ * DBHelper
  * Created by fionera on 15-7-23.
  */
+
 public class DBHelper extends SQLiteOpenHelper {
 
-    private String DatabaseName;
+    private String databaseName;
     private SQLiteDatabase db;
 
     public DBHelper(Context context) {
@@ -25,20 +28,19 @@ public class DBHelper extends SQLiteOpenHelper {
 
     public DBHelper(Context context, String name) {
         this(context, name, null);
-
     }
 
-    public DBHelper(Context context, String name, SQLiteDatabase.CursorFactory factory) {
+    private DBHelper(Context context, String name, SQLiteDatabase.CursorFactory factory) {
         this(context, name, factory, 1);
     }
 
-    public DBHelper(Context context, String name, SQLiteDatabase.CursorFactory factory,
-            int version) {
+    private DBHelper(Context context, String name, SQLiteDatabase.CursorFactory factory,
+                     int version) {
         super(context, name, factory, version);
-        this.DatabaseName = name;
+        this.databaseName = name;
     }
 
-    public void CloseDb() {
+    public void closeDb() {
         if (db != null) {
             db.close();
         }
@@ -46,9 +48,10 @@ public class DBHelper extends SQLiteOpenHelper {
 
     @Override
     public void onCreate(SQLiteDatabase db) {
-
-        // 创建数据表Tbl_ChatEntity用于存放聊天信息
-        db.execSQL("create table Tbl_" + DatabaseName + "(" +
+        /*
+         创建数据表Tbl_ChatEntity用于存放聊天信息
+          */
+        db.execSQL("create table Tbl_" + databaseName + "(" +
                 "id INTEGER primary key autoincrement ," +
                 "name char(10)," +
                 "content varchar(100)," +
@@ -61,31 +64,20 @@ public class DBHelper extends SQLiteOpenHelper {
 
     }
 
-    public Cursor queryAllChatEntity() {
-
-        Cursor cursor;
-        db = getReadableDatabase();
-        String[] columns = {"id", "name", "content", "date", "flag"};
-        cursor = db.query("Tbl_ChatEntity", columns, null, null, null, null, "id");
-
-        // 不能关闭数据库
-        return cursor;
-    }
-
     /**
      * 返回数据库聊天记录总数
      *
      * @return 总数
      */
     public int getCount() {
-        int count = 0;
-        Cursor cursor = this.queryAllChatEntity();
-        while (cursor.moveToNext()) {
+        db = getReadableDatabase();
 
-            count++;
-        }
+        String[] columns = {"id", "name", "content", "date", "flag"};
+        Cursor cursor = db.query("Tbl_ChatEntity", columns, null, null, null, null, "id");
+        int count = cursor.getCount();
         cursor.close();
-        this.CloseDb();
+
+        closeDb();
 
         return count;
     }
@@ -97,37 +89,41 @@ public class DBHelper extends SQLiteOpenHelper {
      * @param pageSize    每页显示的记录
      * @return 当前页的记录
      */
-    public ArrayList<ChatMsgBean> getSomeItems(int currentPage, int pageSize) {
-        int firstResult = (currentPage - 1) * pageSize;
+    public List<ChatMsgBean> getSomeItems(int currentPage, int pageSize) {
         db = getReadableDatabase();
-        Cursor cursor;
+
+        int firstResult = (currentPage - 1) * pageSize;
         String[] columns = {"id", "name", "content", "date", "flag"};
-        cursor = db.query("Tbl_ChatEntity", columns, null, null, null, null, "id desc",
+        Cursor cursor = db.query("Tbl_ChatEntity", columns, null, null, null, null, "id desc",
                 firstResult + "," + pageSize);
 
-        ArrayList<ChatMsgBean> items = new ArrayList<>();
+        List<ChatMsgBean> items = new ArrayList<>();
         while (cursor.moveToNext()) {
-
             ChatMsgBean entry = new ChatMsgBean();
-            int id = cursor.getInt(0);
+
             String name = cursor.getString(1);
             String content = cursor.getString(2);
             String date = cursor.getString(3);
             int flag = cursor.getInt(4);
+
             entry.setName(name);
             entry.setText(content);
             entry.setDate(date);
             entry.setMsgType(flag == 1);
+
             items.add(entry);
         }
-        Collections.reverse(items);
         cursor.close();
+
+        Collections.reverse(items);
+
         //不要关闭数据库
         return items;
     }
 
     public void insertChatEntity(ChatMsgBean entry) {
         SQLiteDatabase db = getWritableDatabase();
+
         String name = entry.getName();
         String content = entry.getText();
         String date = entry.getDate();
@@ -137,7 +133,8 @@ public class DBHelper extends SQLiteOpenHelper {
         values.put("name", name);
         values.put("content", content);
         values.put("date", date);
-        values.put("flag", flag ? new Integer(1) : new Integer(0));
+        values.put("flag", flag ? Integer.valueOf(1) : Integer.valueOf(0));
+
         db.insert("Tbl_ChatEntity", null, values);
         db.close();
     }
